--- a/141031.Cloudy.in.Japanese.Storage.Technology.in.Clouds_cloudy_clouds_storage_rakuten_viber.md
+++ b/141031.Cloudy.in.Japanese.Storage.Technology.in.Clouds_cloudy_clouds_storage_rakuten_viber.md
@@ -17,12 +17,52 @@ s2 { font-size:larger; font-weight: bold; font-style: normal; text-decoration: n
 </style>
 
 <span style="font-size:smaller;">[back to maratishe.github.io](http://maratishe.github.io/)</span>
-<hdr>Title</hdr>
-Author: <s2>maratishe@gmail.com</s2> -- created <s1>140710</s1>
+<hdr>Cloudy会 第2回 (11.8＠天神)  クラウド時代のストーレジ技術</hdr>
+Author: <s2>maratishe@gmail.com</s2> -- created <s1>141031</s1>
 
-# Chapter. 
 
-text 
+下記の通り、「クラウド時代のストーレジ技術」のテーマで
+クラウディ会の第２回＠天神を開催しますので、是非ご参加
+くださいますようご案内申し上げます。
+
+
+クラウディ会 (第２回、日本語、11.8＠天神)
+=================================
+
+ *  <s1>クラウディ会の目的：</s1> クラウドにおける或る具体的な問題を解決すること
+ *  <s1>課題：</s1>クラウド時代のストーレジ技術
+ *  <s1>概要 :</s1>
+---
+このクラウディ会では、<s1>SQL・noSQL・インデックス化・メモリマップ・分散化
+</s1>などの基盤を勉強してから、クラウド時代に各技術の活用化について議論する。
+最終的に、<s1>「クラウド技術＜＞ストーレジ技術」</s1>の間にマッピングを考えていく。
+
+１つの具体的な事例として、今年楽天に買収された<s1>Viberの「サブ秒」性能目標</s1>と
+その技術の進化を議論する。議論の時間帯にも、<s1>「Viberの問題」を課題</s1>にして、
+最終的な結論が得られるように頑張っていく。
+
+---
+
+ * <s1>日程：</s1> 11月08日（土）13:00~16:00
+```
+　　・13:00～14:30   講義
+　　・14:30～14:45　休憩
+　　・14:45～15:00   議論のスタート・課題の紹介・説明
+　　・15:00～15:45　議論・結論探し
+　　・15:45～16:00　結論の発表、解散。
+```
+
+ * <s1>会場：</s1> 九工大＠天神, 地図・案内：https://www.kyutech.ac.jp/facilities/satellite-campus
+ * <s1> 参加形式：</s1> **無料**ですが、以下から１つを選択して**参加登録**をお願いします
+　　　　　
+    * [直接な登録フォーム](http://goo.gl/forms/SdPZYn5R3v)
+    * [connpass](http://cloudy.connpass.com/event/9427)
+    * [ATND](https://atnd.org/events/58623)
+    * [Zusaar](http://www.zusaar.com/event/8727003)
+    * [EventRegist](http://eventregist.com/e/cloudy141108)
+
+---
+この情報を流通する辺りご協力を頂ければ幸いです。
 
 
 <br><hr>
