--- a/chatbot611/190905.md
+++ b/chatbot611/190905.md
@@ -3,3 +3,6 @@
 
 (1) コンテキスト：データだけでなく、そのメータデータもつく感じ。例：「発表」コンテキスト。①研究発表、②ダンス・サークル系パフォーマンス。例：「卒業」①学校を卒業する、➁プロジェクトを終わらせる。実装の面、facet＝ファセットの技術がある。
 [なぜ図書館はLinked Dataに取り組むのか 欧米の事例か...](https://www.jstage.jst.go.jp/article/johokanri/58/2/58_127/_html/-char/ja)
+
+(2) 文章を分類する技術。Universal Sentence Encoder (USE)のアプローチ。
+背景 [生TensorFlow七転八倒記(6)：TensorFlow Hubのtext embeddingsを使って日本語テキストを分類してみた（追記あり）](https://tjo.hatenablog.com/entry/2018/06/26/220234)
