--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -1,37 +1,47 @@
-2020-07-10 EAI・bigdata★free #deadlines ishort.ink/c1vK#723147d333 due:2020-07-01
-2020-07-10 iet・smartcity #deadlines ishort.ink/c1vK#e2288dde43 due:2020-07-01
-2020-07-10 ACMSenSys・横浜 #deadlines ishort.ink/c1vK#3071712d16 due:2020-07-03
-2020-07-10 mdpi・wmobile #deadlines ishort.ink/c1vK#27499718e8 due:2020-07-04
-2020-07-10 EAI・mobiquitous★free #deadlines ishort.ink/c1vK#90ef7f7aa4 due:2020-07-05
-2020-07-10 CNSM@cyberspace #deadlines ishort.ink/c1vK#f8c9a76f6c due:2020-07-10
-2020-07-10 ICDCN＠奈良 #deadlines ishort.ink/c1vK#09c5d846eb due:2020-07-10
-2020-07-10 MSM＠tokyo #deadlines ishort.ink/c1vK#d99f427dc5 due:2020-07-15
-2020-07-10 mdpi・vehicular #deadlines ishort.ink/c1vK#b692e4c16c due:2020-07-15
-2020-07-10 中央大 #jobhunt ishort.ink/kSNB#c6feced1df due:2020-07-15
-2020-07-10 同志社大 #jobhunt ishort.ink/kSNB#81352ab904 due:2020-07-15
-2020-07-10 千葉商科大 #jobhunt ishort.ink/kSNB#c02e478905 due:2020-07-17
-2020-07-10 mdpi・hiding #deadlines ishort.ink/c1vK#99afb85e5d due:2020-07-18
-2020-07-10 hindawi・smartcities #deadlines ishort.ink/c1vK#0d90c30c9d due:2020-07-20
-2020-07-10 東京大 #jobhunt ishort.ink/kSNB#afe59e13cb due:2020-07-21
-2020-07-10 EAI・cyberphy@cyber #deadlines ishort.ink/c1vK#36e9005607 due:2020-07-23
-2020-07-10 EAI・smartcity@cyber #deadlines ishort.ink/c1vK#43a5793eea due:2020-07-23
-2020-07-10 EAI・urbiot@cyber #deadlines ishort.ink/c1vK#5f1e4660a9 due:2020-07-23
-2020-07-10 滋賀大 #jobhunt ishort.ink/kSNB#a59d532b7d due:2020-07-30
-2020-07-10 ieeespecial・bigdata #deadlines ishort.ink/c1vK#f4d47c3089 due:2020-07-31
-2020-07-10 mdpi・V2Xcomm #deadlines ishort.ink/c1vK#c4e9e6af93 due:2020-07-31
-2020-07-10 hindawi・smartphoneauth #deadlines ishort.ink/c1vK#97e20e0cb4 due:2020-08-07
-2020-07-10 筑波大 #jobhunt ishort.ink/kSNB#6bedfcd2ce due:2020-08-17
-2020-07-10 広島工業大 #jobhunt ishort.ink/kSNB#4f2559a4fd due:2020-08-28
-2020-07-10 日本工業大 #jobhunt ishort.ink/kSNB#56f2829a1f due:2020-08-31
-2020-07-10 般社団法人CRD #jobhunt ishort.ink/kSNB#ad2eb56a5b due:2020-08-31
-2020-07-10 明治大 #jobhunt ishort.ink/kSNB#abe8802bd2 due:2020-09-07
-2020-07-10 公立はこだて未来大 #jobhunt ishort.ink/kSNB#7a86734726 due:2020-09-10
-2020-07-10 岡山理科大 #jobhunt ishort.ink/kSNB#20f6e27e79 due:2020-09-18
-2020-07-10 ACMtran・IoV #deadlines ishort.ink/c1vK#5303efd31e due:2020-09-28
-2020-07-10 mdpi・stenography #deadlines ishort.ink/c1vK#d91b1c57ba due:2020-09-30
-2020-07-10 東京電機大 #jobhunt ishort.ink/kSNB#541bf411c3 due:2020-09-30
-2020-07-10 acm・edgeAI #deadlines ishort.ink/c1vK#0056781663 due:2020-10-01
-2020-07-10 tnsm・netmng #deadlines ishort.ink/c1vK#acd9ce1eab due:2020-10-15
-2020-07-10 福岡工業大 #jobhunt ishort.ink/kSNB#b9af474c3b due:2020-10-30
-2020-07-10 springerj・cybersecAI #deadlines ishort.ink/c1vK#e050f91cf8 due:2020-10-31
-2020-07-10 IET・iot #deadlines ishort.ink/c1vK#25d8432a90 due:2020-12-01
+2020-07-11 EAI・bigdata★free #deadlines ishort.ink/c1vK#723147d333 due:2020-07-01
+2020-07-11 iet・smartcity #deadlines ishort.ink/c1vK#e2288dde43 due:2020-07-01
+2020-07-11 ACMSenSys・横浜 #deadlines ishort.ink/c1vK#3071712d16 due:2020-07-03
+2020-07-11 mdpi・wmobile #deadlines ishort.ink/c1vK#27499718e8 due:2020-07-04
+2020-07-11 EAI・mobiquitous★free #deadlines ishort.ink/c1vK#90ef7f7aa4 due:2020-07-05
+2020-07-11 CNSM@cyberspace #deadlines ishort.ink/c1vK#f8c9a76f6c due:2020-07-10
+2020-07-11 ICDCN＠奈良 #deadlines ishort.ink/c1vK#09c5d846eb due:2020-07-10
+2020-07-11 clean mail #todo.current due:2020-07-11
+2020-07-11 gcal: deadlines, jobhunt #todo.current due:2020-07-11
+2020-07-11 kindle #todo.current due:2020-07-11
+2020-07-11 whistle #todo.current due:2020-07-11
+2020-07-11 MSM＠tokyo #deadlines ishort.ink/c1vK#d99f427dc5 due:2020-07-15
+2020-07-11 mdpi・vehicular #deadlines ishort.ink/c1vK#b692e4c16c due:2020-07-15
+2020-07-11 中央大 #jobhunt ishort.ink/kSNB#c6feced1df due:2020-07-15
+2020-07-11 同志社大 #jobhunt ishort.ink/kSNB#81352ab904 due:2020-07-15
+2020-07-11 千葉商科大 #jobhunt ishort.ink/kSNB#c02e478905 due:2020-07-17
+2020-07-11 mdpi・hiding #deadlines ishort.ink/c1vK#99afb85e5d due:2020-07-18
+2020-07-11 hindawi・smartcities #deadlines ishort.ink/c1vK#0d90c30c9d due:2020-07-20
+2020-07-11 adobe @ work, home #todo.midterm due:2020-07-21
+2020-07-11 atih @ natasha #todo.midterm due:2020-07-21
+2020-07-11 kgu zemi faces #todo.midterm due:2020-07-21
+2020-07-11 samsung redo cygwin #todo.midterm due:2020-07-21
+2020-07-11 windows auth: ② zaniya #todo.midterm due:2020-07-21
+2020-07-11 東京大 #jobhunt ishort.ink/kSNB#afe59e13cb due:2020-07-21
+2020-07-11 EAI・cyberphy@cyber #deadlines ishort.ink/c1vK#36e9005607 due:2020-07-23
+2020-07-11 EAI・smartcity@cyber #deadlines ishort.ink/c1vK#43a5793eea due:2020-07-23
+2020-07-11 EAI・urbiot@cyber #deadlines ishort.ink/c1vK#5f1e4660a9 due:2020-07-23
+2020-07-11 滋賀大 #jobhunt ishort.ink/kSNB#a59d532b7d due:2020-07-30
+2020-07-11 ieeespecial・bigdata #deadlines ishort.ink/c1vK#f4d47c3089 due:2020-07-31
+2020-07-11 mdpi・V2Xcomm #deadlines ishort.ink/c1vK#c4e9e6af93 due:2020-07-31
+2020-07-11 hindawi・smartphoneauth #deadlines ishort.ink/c1vK#97e20e0cb4 due:2020-08-07
+2020-07-11 longterm task #todo.longterm due:2020-08-10
+2020-07-11 筑波大 #jobhunt ishort.ink/kSNB#6bedfcd2ce due:2020-08-17
+2020-07-11 広島工業大 #jobhunt ishort.ink/kSNB#4f2559a4fd due:2020-08-28
+2020-07-11 日本工業大 #jobhunt ishort.ink/kSNB#56f2829a1f due:2020-08-31
+2020-07-11 般社団法人CRD #jobhunt ishort.ink/kSNB#ad2eb56a5b due:2020-08-31
+2020-07-11 明治大 #jobhunt ishort.ink/kSNB#abe8802bd2 due:2020-09-07
+2020-07-11 公立はこだて未来大 #jobhunt ishort.ink/kSNB#7a86734726 due:2020-09-10
+2020-07-11 岡山理科大 #jobhunt ishort.ink/kSNB#20f6e27e79 due:2020-09-18
+2020-07-11 ACMtran・IoV #deadlines ishort.ink/c1vK#5303efd31e due:2020-09-28
+2020-07-11 mdpi・stenography #deadlines ishort.ink/c1vK#d91b1c57ba due:2020-09-30
+2020-07-11 東京電機大 #jobhunt ishort.ink/kSNB#541bf411c3 due:2020-09-30
+2020-07-11 acm・edgeAI #deadlines ishort.ink/c1vK#0056781663 due:2020-10-01
+2020-07-11 tnsm・netmng #deadlines ishort.ink/c1vK#acd9ce1eab due:2020-10-15
+2020-07-11 福岡工業大 #jobhunt ishort.ink/kSNB#b9af474c3b due:2020-10-30
+2020-07-11 springerj・cybersecAI #deadlines ishort.ink/c1vK#e050f91cf8 due:2020-10-31
+2020-07-11 IET・iot #deadlines ishort.ink/c1vK#25d8432a90 due:2020-12-01
