--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -1,47 +1,103 @@
-2020-07-11 EAI・bigdata★free #deadlines ishort.ink/c1vK#723147d333 due:2020-07-01
-2020-07-11 iet・smartcity #deadlines ishort.ink/c1vK#e2288dde43 due:2020-07-01
-2020-07-11 ACMSenSys・横浜 #deadlines ishort.ink/c1vK#3071712d16 due:2020-07-03
-2020-07-11 mdpi・wmobile #deadlines ishort.ink/c1vK#27499718e8 due:2020-07-04
-2020-07-11 EAI・mobiquitous★free #deadlines ishort.ink/c1vK#90ef7f7aa4 due:2020-07-05
-2020-07-11 CNSM@cyberspace #deadlines ishort.ink/c1vK#f8c9a76f6c due:2020-07-10
-2020-07-11 ICDCN＠奈良 #deadlines ishort.ink/c1vK#09c5d846eb due:2020-07-10
-2020-07-11 clean mail #todo.current due:2020-07-11
-2020-07-11 gcal: deadlines, jobhunt #todo.current due:2020-07-11
-2020-07-11 kindle #todo.current due:2020-07-11
-2020-07-11 whistle #todo.current due:2020-07-11
-2020-07-11 MSM＠tokyo #deadlines ishort.ink/c1vK#d99f427dc5 due:2020-07-15
-2020-07-11 mdpi・vehicular #deadlines ishort.ink/c1vK#b692e4c16c due:2020-07-15
-2020-07-11 中央大 #jobhunt ishort.ink/kSNB#c6feced1df due:2020-07-15
-2020-07-11 同志社大 #jobhunt ishort.ink/kSNB#81352ab904 due:2020-07-15
-2020-07-11 千葉商科大 #jobhunt ishort.ink/kSNB#c02e478905 due:2020-07-17
-2020-07-11 mdpi・hiding #deadlines ishort.ink/c1vK#99afb85e5d due:2020-07-18
-2020-07-11 hindawi・smartcities #deadlines ishort.ink/c1vK#0d90c30c9d due:2020-07-20
-2020-07-11 adobe @ work, home #todo.midterm due:2020-07-21
-2020-07-11 atih @ natasha #todo.midterm due:2020-07-21
-2020-07-11 kgu zemi faces #todo.midterm due:2020-07-21
-2020-07-11 samsung redo cygwin #todo.midterm due:2020-07-21
-2020-07-11 windows auth: ② zaniya #todo.midterm due:2020-07-21
-2020-07-11 東京大 #jobhunt ishort.ink/kSNB#afe59e13cb due:2020-07-21
-2020-07-11 EAI・cyberphy@cyber #deadlines ishort.ink/c1vK#36e9005607 due:2020-07-23
-2020-07-11 EAI・smartcity@cyber #deadlines ishort.ink/c1vK#43a5793eea due:2020-07-23
-2020-07-11 EAI・urbiot@cyber #deadlines ishort.ink/c1vK#5f1e4660a9 due:2020-07-23
-2020-07-11 滋賀大 #jobhunt ishort.ink/kSNB#a59d532b7d due:2020-07-30
-2020-07-11 ieeespecial・bigdata #deadlines ishort.ink/c1vK#f4d47c3089 due:2020-07-31
-2020-07-11 mdpi・V2Xcomm #deadlines ishort.ink/c1vK#c4e9e6af93 due:2020-07-31
-2020-07-11 hindawi・smartphoneauth #deadlines ishort.ink/c1vK#97e20e0cb4 due:2020-08-07
-2020-07-11 longterm task #todo.longterm due:2020-08-10
-2020-07-11 筑波大 #jobhunt ishort.ink/kSNB#6bedfcd2ce due:2020-08-17
-2020-07-11 広島工業大 #jobhunt ishort.ink/kSNB#4f2559a4fd due:2020-08-28
-2020-07-11 日本工業大 #jobhunt ishort.ink/kSNB#56f2829a1f due:2020-08-31
-2020-07-11 般社団法人CRD #jobhunt ishort.ink/kSNB#ad2eb56a5b due:2020-08-31
-2020-07-11 明治大 #jobhunt ishort.ink/kSNB#abe8802bd2 due:2020-09-07
-2020-07-11 公立はこだて未来大 #jobhunt ishort.ink/kSNB#7a86734726 due:2020-09-10
-2020-07-11 岡山理科大 #jobhunt ishort.ink/kSNB#20f6e27e79 due:2020-09-18
-2020-07-11 ACMtran・IoV #deadlines ishort.ink/c1vK#5303efd31e due:2020-09-28
-2020-07-11 mdpi・stenography #deadlines ishort.ink/c1vK#d91b1c57ba due:2020-09-30
-2020-07-11 東京電機大 #jobhunt ishort.ink/kSNB#541bf411c3 due:2020-09-30
-2020-07-11 acm・edgeAI #deadlines ishort.ink/c1vK#0056781663 due:2020-10-01
-2020-07-11 tnsm・netmng #deadlines ishort.ink/c1vK#acd9ce1eab due:2020-10-15
-2020-07-11 福岡工業大 #jobhunt ishort.ink/kSNB#b9af474c3b due:2020-10-30
-2020-07-11 springerj・cybersecAI #deadlines ishort.ink/c1vK#e050f91cf8 due:2020-10-31
-2020-07-11 IET・iot #deadlines ishort.ink/c1vK#25d8432a90 due:2020-12-01
+2020-07-13 拓殖大.ソフトウェア工学 #jobhunt ishort.ink/kSNB#f4122f8fe2 due:2020-06-26
+2020-07-13 EAI・bigdata★free #deadlines ishort.ink/c1vK#723147d333 due:2020-07-01
+2020-07-13 iet・smartcity.retail.commerce #deadlines ishort.ink/c1vK#83cbf73cbb due:2020-07-01
+2020-07-13 ACMSenSys・横浜 #deadlines ishort.ink/c1vK#3071712d16 due:2020-07-03
+2020-07-13 mdpi・wmobile #deadlines ishort.ink/c1vK#27499718e8 due:2020-07-04
+2020-07-13 clean mail #todo.current due:2020-07-13
+2020-07-13 gcal: deadlines, jobhunt #todo.current due:2020-07-13
+2020-07-13 kindle #todo.current due:2020-07-13
+2020-07-13 whistle #todo.current due:2020-07-13
+2020-07-13 IEEE.IoTJ.smart.IoT.covid #deadlines ishort.ink/c1vK#ddaf94dd1c due:2020-07-15
+2020-07-13 MSM＠tokyo #deadlines ishort.ink/c1vK#d99f427dc5 due:2020-07-15
+2020-07-13 mdpi・vehicular #deadlines ishort.ink/c1vK#b692e4c16c due:2020-07-15
+2020-07-13 中央大 #jobhunt ishort.ink/kSNB#c6feced1df due:2020-07-15
+2020-07-13 同志社大 #jobhunt ishort.ink/kSNB#81352ab904 due:2020-07-15
+2020-07-13 ICDCN＠奈良 #deadlines ishort.ink/c1vK#09c5d846eb due:2020-07-17
+2020-07-13 千葉商科大 #jobhunt ishort.ink/kSNB#c02e478905 due:2020-07-17
+2020-07-13 千葉商科大.情報・メディア #jobhunt ishort.ink/kSNB#96921a1828 due:2020-07-17
+2020-07-13 mdpi・hiding #deadlines ishort.ink/c1vK#99afb85e5d due:2020-07-18
+2020-07-13 hindawi・smartcities #deadlines ishort.ink/c1vK#0d90c30c9d due:2020-07-20
+2020-07-13 近畿大情報セキュリティ評価 #jobhunt ishort.ink/kSNB#fa7c4db3c2 due:2020-07-20
+2020-07-13 東京大 #jobhunt ishort.ink/kSNB#afe59e13cb due:2020-07-21
+2020-07-13 EAI.INTSYS.smartITS.smartcity #deadlines ishort.ink/c1vK#cdae1473d2 due:2020-07-23
+2020-07-13 EAI.SCITA.smartsociety.infra.apps #deadlines ishort.ink/c1vK#ec93c3bfe5 due:2020-07-23
+2020-07-13 EAI・cyberphy@cyber #deadlines ishort.ink/c1vK#36e9005607 due:2020-07-23
+2020-07-13 EAI・smartcity@cyber #deadlines ishort.ink/c1vK#43a5793eea due:2020-07-23
+2020-07-13 EAI・urbiot@cyber #deadlines ishort.ink/c1vK#5f1e4660a9 due:2020-07-23
+2020-07-13 adobe @ work, home #todo.midterm due:2020-07-23
+2020-07-13 atih @ natasha #todo.midterm due:2020-07-23
+2020-07-13 kgu zemi faces #todo.midterm due:2020-07-23
+2020-07-13 samsung redo cygwin #todo.midterm due:2020-07-23
+2020-07-13 tokyo hotels and schedule #todo.midterm due:2020-07-23
+2020-07-13 video recognition engine #todo.midterm due:2020-07-23
+2020-07-13 windows auth: ② zaniya #todo.midterm due:2020-07-23
+2020-07-13 CNSM@cyberspace #deadlines ishort.ink/c1vK#f8c9a76f6c due:2020-07-24
+2020-07-13 慶應義塾.情報工学分野 #jobhunt ishort.ink/kSNB#1faa482cfc due:2020-07-24
+2020-07-13 滋賀大 #jobhunt ishort.ink/kSNB#a59d532b7d due:2020-07-30
+2020-07-13 EAI・mobiquitous★free #deadlines ishort.ink/c1vK#90ef7f7aa4 due:2020-07-31
+2020-07-13 IEEEJ.bigdatarecommend #deadlines ishort.ink/c1vK#2b9898baeb due:2020-07-31
+2020-07-13 mdpi・V2Xcomm #deadlines ishort.ink/c1vK#c4e9e6af93 due:2020-07-31
+2020-07-13 九州国際大.情報学基礎 #jobhunt ishort.ink/kSNB#ed8764462a due:2020-07-31
+2020-07-13 名古屋大.人間情報学 #jobhunt ishort.ink/kSNB#e24f2cb09e due:2020-07-31
+2020-07-13 埼玉工業大.情報学 #jobhunt ishort.ink/kSNB#425f4c047f due:2020-07-31
+2020-07-13 岡山理科大.人工知能分野 #jobhunt ishort.ink/kSNB#f2a049faff due:2020-07-31
+2020-07-13 法政大.信号処理、統計、計測、機械学習分野 #jobhunt ishort.ink/kSNB#837a6a163d due:2020-07-31
+2020-07-13 EAI.bodynets #deadlines ishort.ink/c1vK#cf2db2d7b3 due:2020-08-01
+2020-07-13 hindawi・smartphoneauth #deadlines ishort.ink/c1vK#97e20e0cb4 due:2020-08-07
+2020-07-13 longterm task #todo.longterm due:2020-08-12
+2020-07-13 三重大.知能工学講座・データサイエンス2jobs #jobhunt ishort.ink/kSNB#5287ecef42 due:2020-08-12
+2020-07-13 EAI.AICON.chinoAI.commnets #deadlines ishort.ink/c1vK#fc0d2329b3 due:2020-08-16
+2020-07-13 NAIST.ロボティクス分野 #jobhunt ishort.ink/kSNB#2a5cbddcf2 due:2020-08-17
+2020-07-13 筑波大 #jobhunt ishort.ink/kSNB#6bedfcd2ce due:2020-08-17
+2020-07-13 岡山県立大.知覚情報処理 #jobhunt ishort.ink/kSNB#ee1efdc1df due:2020-08-19
+2020-07-13 近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs #jobhunt ishort.ink/kSNB#16a1d3b9d0 due:2020-08-19
+2020-07-13 玉川大学.国際教養学科 #jobhunt ishort.ink/kSNB#18a05c382d due:2020-08-21
+2020-07-13 龍谷大.情報工学分野 #jobhunt ishort.ink/kSNB#f9b82aea16 due:2020-08-21
+2020-07-13 龍谷大.通信工学分野 #jobhunt ishort.ink/kSNB#e75713566c due:2020-08-21
+2020-07-13 近畿大.総合理工 #jobhunt ishort.ink/kSNB#2239e09e58 due:2020-08-22
+2020-07-13 中京大.コンピュータ処理論及び関連科目 #jobhunt ishort.ink/kSNB#e9d0f232de due:2020-08-24
+2020-07-13 久留米大.情報学フロンティア #jobhunt ishort.ink/kSNB#4c438c163f due:2020-08-24
+2020-07-13 日本大.ロボット・制御 #jobhunt ishort.ink/kSNB#3ef71d894d due:2020-08-25
+2020-07-13 広島工業大 #jobhunt ishort.ink/kSNB#4f2559a4fd due:2020-08-28
+2020-07-13 京都大.通信情報システム #jobhunt ishort.ink/kSNB#039122b303 due:2020-08-31
+2020-07-13 大阪大.情報科学 #jobhunt ishort.ink/kSNB#3697049074 due:2020-08-31
+2020-07-13 岡山理科大.情報数理.情報工学.2posts #jobhunt ishort.ink/kSNB#38136546d5 due:2020-08-31
+2020-07-13 日本工業大 #jobhunt ishort.ink/kSNB#56f2829a1f due:2020-08-31
+2020-07-13 東京都立大.情報学基礎.2posts #jobhunt ishort.ink/kSNB#955f81b4e2 due:2020-08-31
+2020-07-13 東京電機大.人間情報学 #jobhunt ishort.ink/kSNB#3b904bc834 due:2020-08-31
+2020-07-13 株式会社Nextremer.計算科学.quantum #jobhunt ishort.ink/kSNB#5fa1a2f2e1 due:2020-08-31
+2020-07-13 滋賀県立大.センシング工学分野 #jobhunt ishort.ink/kSNB#c56f9be485 due:2020-08-31
+2020-07-13 立命館大学2jobs(1eng).情報理工学部.セキュリティ・ネットワークコース #jobhunt ishort.ink/kSNB#1d2deb79a1 due:2020-08-31
+2020-07-13 般社団法人CRD #jobhunt ishort.ink/kSNB#ad2eb56a5b due:2020-08-31
+2020-07-13 駒澤大.情報分野 #jobhunt ishort.ink/kSNB#306428a9df due:2020-08-31
+2020-07-13 明治大 #jobhunt ishort.ink/kSNB#abe8802bd2 due:2020-09-07
+2020-07-13 公立はこだて未来大 #jobhunt ishort.ink/kSNB#7a86734726 due:2020-09-10
+2020-07-13 公立はこだて未来大.情報デザイン.複雑系知能分野 #jobhunt ishort.ink/kSNB#26497bf949 due:2020-09-10
+2020-07-13 北海道.情報科学研究院 #jobhunt ishort.ink/kSNB#47c598d268 due:2020-09-11
+2020-07-13 東京理科大工学部情報工学科インテリジェントシステム分野 #jobhunt ishort.ink/kSNB#3a4af00f34 due:2020-09-14
+2020-07-13 岡山大学.ハードウェア.ソフトウェア #jobhunt ishort.ink/kSNB#1e6b039c83 due:2020-09-15
+2020-07-13 青山学院大.情報社会科学 #jobhunt ishort.ink/kSNB#9cea46b8e5 due:2020-09-15
+2020-07-13 IEEE.MSN@東京.mobility.sensing.networking #deadlines ishort.ink/c1vK#56cb850a48 due:2020-09-17
+2020-07-13 岡山理科大 #jobhunt ishort.ink/kSNB#20f6e27e79 due:2020-09-18
+2020-07-13 長岡技術科学大.情報・経営システム工学専攻 #jobhunt ishort.ink/kSNB#090d9d916f due:2020-09-18
+2020-07-13 岩手県立大.人工知能コース #jobhunt ishort.ink/kSNB#a00fdcfe40 due:2020-09-25
+2020-07-13 東京理科大.数理モデリング、知能数理分野 #jobhunt ishort.ink/kSNB#d69e224299 due:2020-09-25
+2020-07-13 ACMtran・IoV #deadlines ishort.ink/c1vK#5303efd31e due:2020-09-28
+2020-07-13 mdpi・stenography #deadlines ishort.ink/c1vK#d91b1c57ba due:2020-09-30
+2020-07-13 成蹊大.計算科学 #jobhunt ishort.ink/kSNB#729221f684 due:2020-09-30
+2020-07-13 東京都市大.情報数理 #jobhunt ishort.ink/kSNB#3e71914ffd due:2020-09-30
+2020-07-13 東京電機大 #jobhunt ishort.ink/kSNB#541bf411c3 due:2020-09-30
+2020-07-13 株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】 #jobhunt ishort.ink/kSNB#11294f0d1a due:2020-09-30
+2020-07-13 福岡大.情報学 #jobhunt ishort.ink/kSNB#c1c2b5544e due:2020-09-30
+2020-07-13 acm・edgeAI #deadlines ishort.ink/c1vK#0056781663 due:2020-10-01
+2020-07-13 明星大.データアナリティクス #jobhunt ishort.ink/kSNB#222bdcbcbe due:2020-10-02
+2020-07-13 立命館大学.システム制御工学.無線通信・電波 #jobhunt ishort.ink/kSNB#bd5caa898a due:2020-10-09
+2020-07-13 tnsm・netmng #deadlines ishort.ink/c1vK#acd9ce1eab due:2020-10-15
+2020-07-13 FIT.制御・計測に関連する分野 #jobhunt ishort.ink/kSNB#d25f1244df due:2020-10-16
+2020-07-13 福岡工業大 #jobhunt ishort.ink/kSNB#b9af474c3b due:2020-10-30
+2020-07-13 springerj・cybersecAI #deadlines ishort.ink/c1vK#e050f91cf8 due:2020-10-31
+2020-07-13 mdpi.5g #deadlines ishort.ink/c1vK#70c7073724 due:2020-11-20
+2020-07-13 IET・iot #deadlines ishort.ink/c1vK#25d8432a90 due:2020-12-01
+2020-07-13 MDPI.geotech.spatiotemporal #deadlines ishort.ink/c1vK#56e2617def due:2020-12-10
+2020-07-13 MDPI.SloT.sensing.IoT #deadlines ishort.ink/c1vK#1f0532ec77 due:2020-12-31
+2020-07-13 MDPI.drone.swarms #deadlines ishort.ink/c1vK#9e2696f5c6 due:2020-12-31
