--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -1,90 +1,93 @@
-2020-07-19 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2020-07-19
-2020-07-19 kindle #current due:2020-07-19
-2020-07-19 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2020-07-19
-2020-07-19 wifi dongle @ home #current due:2020-07-19
-2020-07-19 東京大 #jobhunt#afe59e13cb due:2020-07-21
-2020-07-19 EAI.INTSYS.smartITS.smartcity #deadlines#cdae1473d2 due:2020-07-23
-2020-07-19 EAI.SCITA.smartsociety.infra.apps #deadlines#ec93c3bfe5 due:2020-07-23
-2020-07-19 EAI・cyberphy@cyber #deadlines#36e9005607 due:2020-07-23
-2020-07-19 EAI・smartcity@cyber #deadlines#43a5793eea due:2020-07-23
-2020-07-19 EAI・urbiot@cyber #deadlines#5f1e4660a9 due:2020-07-23
-2020-07-19 CNSM@cyberspace #deadlines#f8c9a76f6c due:2020-07-24
-2020-07-19 慶應義塾.情報工学分野 #jobhunt#1faa482cfc due:2020-07-24
-2020-07-19 (3) docomocycle data collect #regulars due:2020-07-26
-2020-07-19 ① money (weekly) #regulars due:2020-07-26
-2020-07-19 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2020-07-26
-2020-07-19 audio automation for open campus #midterm due:2020-07-29
-2020-07-19 kgu zemi faces #midterm due:2020-07-29
-2020-07-19 samsung redo cygwin #midterm due:2020-07-29
-2020-07-19 simplify yalms #midterm due:2020-07-29
-2020-07-19 tokyo hotels and schedule #midterm due:2020-07-29
-2020-07-19 video recognition engine (sotsuken) #midterm due:2020-07-29
-2020-07-19 滋賀大 #jobhunt#a59d532b7d due:2020-07-30
-2020-07-19 EAI・mobiquitous★free #deadlines#90ef7f7aa4 due:2020-07-31
-2020-07-19 IEEEJ.bigdatarecommend #deadlines#2b9898baeb due:2020-07-31
-2020-07-19 mdpi・V2Xcomm #deadlines#c4e9e6af93 due:2020-07-31
-2020-07-19 九州国際大.情報学基礎 #jobhunt#ed8764462a due:2020-07-31
-2020-07-19 名古屋大.人間情報学 #jobhunt#e24f2cb09e due:2020-07-31
-2020-07-19 埼玉工業大.情報学 #jobhunt#425f4c047f due:2020-07-31
-2020-07-19 岡山理科大.人工知能分野 #jobhunt#f2a049faff due:2020-07-31
-2020-07-19 法政大.信号処理、統計、計測、機械学習分野 #jobhunt#837a6a163d due:2020-07-31
-2020-07-19 EAI.bodynets #deadlines#cf2db2d7b3 due:2020-08-01
-2020-07-19 hindawi・smartphoneauth #deadlines#97e20e0cb4 due:2020-08-07
-2020-07-19 三重大.知能工学講座・データサイエンス2jobs #jobhunt#5287ecef42 due:2020-08-12
-2020-07-19 EAI.AICON.chinoAI.commnets #deadlines#fc0d2329b3 due:2020-08-16
-2020-07-19 NAIST.ロボティクス分野 #jobhunt#2a5cbddcf2 due:2020-08-17
-2020-07-19 筑波大 #jobhunt#6bedfcd2ce due:2020-08-17
-2020-07-19 adobe @ work, home #longterm due:2020-08-18
-2020-07-19 windows auth @ zaniya #longterm due:2020-08-18
-2020-07-19 岡山県立大.知覚情報処理 #jobhunt#ee1efdc1df due:2020-08-19
-2020-07-19 近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs #jobhunt#16a1d3b9d0 due:2020-08-19
-2020-07-19 玉川大学.国際教養学科 #jobhunt#18a05c382d due:2020-08-21
-2020-07-19 龍谷大.情報工学分野 #jobhunt#f9b82aea16 due:2020-08-21
-2020-07-19 龍谷大.通信工学分野 #jobhunt#e75713566c due:2020-08-21
-2020-07-19 近畿大.総合理工 #jobhunt#2239e09e58 due:2020-08-22
-2020-07-19 中京大.コンピュータ処理論及び関連科目 #jobhunt#e9d0f232de due:2020-08-24
-2020-07-19 久留米大.情報学フロンティア #jobhunt#4c438c163f due:2020-08-24
-2020-07-19 日本大.ロボット・制御 #jobhunt#3ef71d894d due:2020-08-25
-2020-07-19 広島工業大 #jobhunt#4f2559a4fd due:2020-08-28
-2020-07-19 京都大.通信情報システム #jobhunt#039122b303 due:2020-08-31
-2020-07-19 大阪大.情報科学 #jobhunt#3697049074 due:2020-08-31
-2020-07-19 岡山理科大.情報数理.情報工学.2posts #jobhunt#38136546d5 due:2020-08-31
-2020-07-19 日本工業大 #jobhunt#56f2829a1f due:2020-08-31
-2020-07-19 東京都立大.情報学基礎.2posts #jobhunt#955f81b4e2 due:2020-08-31
-2020-07-19 東京電機大.人間情報学 #jobhunt#3b904bc834 due:2020-08-31
-2020-07-19 株式会社Nextremer.計算科学.quantum #jobhunt#5fa1a2f2e1 due:2020-08-31
-2020-07-19 滋賀県立大.センシング工学分野 #jobhunt#c56f9be485 due:2020-08-31
-2020-07-19 立命館大学2jobs(1eng).情報理工学部.セキュリティ・ネットワークコース #jobhunt#1d2deb79a1 due:2020-08-31
-2020-07-19 般社団法人CRD #jobhunt#ad2eb56a5b due:2020-08-31
-2020-07-19 駒澤大.情報分野 #jobhunt#306428a9df due:2020-08-31
-2020-07-19 明治大 #jobhunt#abe8802bd2 due:2020-09-07
-2020-07-19 公立はこだて未来大 #jobhunt#7a86734726 due:2020-09-10
-2020-07-19 公立はこだて未来大.情報デザイン.複雑系知能分野 #jobhunt#26497bf949 due:2020-09-10
-2020-07-19 北海道.情報科学研究院 #jobhunt#47c598d268 due:2020-09-11
-2020-07-19 東京理科大工学部情報工学科インテリジェントシステム分野 #jobhunt#3a4af00f34 due:2020-09-14
-2020-07-19 岡山大学.ハードウェア.ソフトウェア #jobhunt#1e6b039c83 due:2020-09-15
-2020-07-19 青山学院大.情報社会科学 #jobhunt#9cea46b8e5 due:2020-09-15
-2020-07-19 IEEE.MSN@東京.mobility.sensing.networking #deadlines#56cb850a48 due:2020-09-17
-2020-07-19 岡山理科大 #jobhunt#20f6e27e79 due:2020-09-18
-2020-07-19 長岡技術科学大.情報・経営システム工学専攻 #jobhunt#090d9d916f due:2020-09-18
-2020-07-19 岩手県立大.人工知能コース #jobhunt#a00fdcfe40 due:2020-09-25
-2020-07-19 東京理科大.数理モデリング、知能数理分野 #jobhunt#d69e224299 due:2020-09-25
-2020-07-19 ACMtran・IoV #deadlines#5303efd31e due:2020-09-28
-2020-07-19 mdpi・stenography #deadlines#d91b1c57ba due:2020-09-30
-2020-07-19 成蹊大.計算科学 #jobhunt#729221f684 due:2020-09-30
-2020-07-19 東京都市大.情報数理 #jobhunt#3e71914ffd due:2020-09-30
-2020-07-19 東京電機大 #jobhunt#541bf411c3 due:2020-09-30
-2020-07-19 株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】 #jobhunt#11294f0d1a due:2020-09-30
-2020-07-19 福岡大.情報学 #jobhunt#c1c2b5544e due:2020-09-30
-2020-07-19 acm・edgeAI #deadlines#0056781663 due:2020-10-01
-2020-07-19 明星大.データアナリティクス #jobhunt#222bdcbcbe due:2020-10-02
-2020-07-19 立命館大学.システム制御工学.無線通信・電波 #jobhunt#bd5caa898a due:2020-10-09
-2020-07-19 tnsm・netmng #deadlines#acd9ce1eab due:2020-10-15
-2020-07-19 FIT.制御・計測に関連する分野 #jobhunt#d25f1244df due:2020-10-16
-2020-07-19 福岡工業大 #jobhunt#b9af474c3b due:2020-10-30
-2020-07-19 springerj・cybersecAI #deadlines#e050f91cf8 due:2020-10-31
-2020-07-19 mdpi.5g #deadlines#70c7073724 due:2020-11-20
-2020-07-19 IET・iot #deadlines#25d8432a90 due:2020-12-01
-2020-07-19 MDPI.geotech.spatiotemporal #deadlines#56e2617def due:2020-12-10
-2020-07-19 MDPI.SloT.sensing.IoT #deadlines#1f0532ec77 due:2020-12-31
-2020-07-19 MDPI.drone.swarms #deadlines#9e2696f5c6 due:2020-12-31
+2020-07-20 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2020-07-20
+2020-07-20 kindle #current due:2020-07-20
+2020-07-20 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2020-07-20
+2020-07-20 wifi dongle @ home #current due:2020-07-20
+2020-07-20 国立研究開発法人科学技術振興機構.「IoE社会のエネルギーシステム」 #fundhunt due:2020-07-22
+2020-07-20 EAI.INTSYS.smartITS.smartcity #deadlines due:2020-07-23
+2020-07-20 EAI.SCITA.smartsociety.infra.apps #deadlines due:2020-07-23
+2020-07-20 EAI・cyberphy@cyber #deadlines due:2020-07-23
+2020-07-20 EAI・smartcity@cyber #deadlines due:2020-07-23
+2020-07-20 EAI・urbiot@cyber #deadlines due:2020-07-23
+2020-07-20 CNSM@cyberspace #deadlines due:2020-07-24
+2020-07-20 慶應義塾.情報工学分野 #jobhunt due:2020-07-24
+2020-07-20 (3) docomocycle data collect #regulars due:2020-07-27
+2020-07-20 ① money (weekly) #regulars due:2020-07-27
+2020-07-20 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2020-07-27
+2020-07-20 audio automation for open campus #midterm due:2020-07-30
+2020-07-20 kgu zemi faces #midterm due:2020-07-30
+2020-07-20 samsung redo cygwin #midterm due:2020-07-30
+2020-07-20 simplify yalms #midterm due:2020-07-30
+2020-07-20 tokyo hotels and schedule #midterm due:2020-07-30
+2020-07-20 video recognition engine (sotsuken) #midterm due:2020-07-30
+2020-07-20 滋賀大 #jobhunt due:2020-07-30
+2020-07-20 EAI・mobiquitous★free #deadlines due:2020-07-31
+2020-07-20 IEEEJ.bigdatarecommend #deadlines due:2020-07-31
+2020-07-20 mdpi・V2Xcomm #deadlines due:2020-07-31
+2020-07-20 九州国際大.情報学基礎 #jobhunt due:2020-07-31
+2020-07-20 名古屋大.人間情報学 #jobhunt due:2020-07-31
+2020-07-20 埼玉工業大.情報学 #jobhunt due:2020-07-31
+2020-07-20 岡山理科大.人工知能分野 #jobhunt due:2020-07-31
+2020-07-20 法政大.信号処理、統計、計測、機械学習分野 #jobhunt due:2020-07-31
+2020-07-20 EAI.bodynets #deadlines due:2020-08-01
+2020-07-20 #fundhunt due:2020-08-05
+2020-07-20 hindawi・smartphoneauth #deadlines due:2020-08-07
+2020-07-20 三重大.知能工学講座・データサイエンス2jobs #jobhunt due:2020-08-12
+2020-07-20 EAI.AICON.chinoAI.commnets #deadlines due:2020-08-16
+2020-07-20 NAIST.ロボティクス分野 #jobhunt due:2020-08-17
+2020-07-20 筑波大 #jobhunt due:2020-08-17
+2020-07-20 adobe @ work, home #longterm due:2020-08-19
+2020-07-20 windows auth @ zaniya #longterm due:2020-08-19
+2020-07-20 岡山県立大.知覚情報処理 #jobhunt due:2020-08-19
+2020-07-20 近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs #jobhunt due:2020-08-19
+2020-07-20 玉川大学.国際教養学科 #jobhunt due:2020-08-21
+2020-07-20 龍谷大.情報工学分野 #jobhunt due:2020-08-21
+2020-07-20 龍谷大.通信工学分野 #jobhunt due:2020-08-21
+2020-07-20 近畿大.総合理工 #jobhunt due:2020-08-22
+2020-07-20 中京大.コンピュータ処理論及び関連科目 #jobhunt due:2020-08-24
+2020-07-20 久留米大.情報学フロンティア #jobhunt due:2020-08-24
+2020-07-20 日本大.ロボット・制御 #jobhunt due:2020-08-25
+2020-07-20 広島工業大 #jobhunt due:2020-08-28
+2020-07-20 京都大.通信情報システム #jobhunt due:2020-08-31
+2020-07-20 大阪大.情報科学 #jobhunt due:2020-08-31
+2020-07-20 岡山理科大.情報数理.情報工学.2posts #jobhunt due:2020-08-31
+2020-07-20 日本工業大 #jobhunt due:2020-08-31
+2020-07-20 東京都立大.情報学基礎.2posts #jobhunt due:2020-08-31
+2020-07-20 東京電機大.人間情報学 #jobhunt due:2020-08-31
+2020-07-20 株式会社Nextremer.計算科学.quantum #jobhunt due:2020-08-31
+2020-07-20 滋賀県立大.センシング工学分野 #jobhunt due:2020-08-31
+2020-07-20 立命館大学2jobs(1eng).情報理工学部.セキュリティ・ネットワークコース #jobhunt due:2020-08-31
+2020-07-20 般社団法人CRD #jobhunt due:2020-08-31
+2020-07-20 駒澤大.情報分野 #jobhunt due:2020-08-31
+2020-07-20 明治大 #jobhunt due:2020-09-07
+2020-07-20 公立はこだて未来大 #jobhunt due:2020-09-10
+2020-07-20 公立はこだて未来大.情報デザイン.複雑系知能分野 #jobhunt due:2020-09-10
+2020-07-20 北海道.情報科学研究院 #jobhunt due:2020-09-11
+2020-07-20 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
+2020-07-20 東京理科大工学部情報工学科インテリジェントシステム分野 #jobhunt due:2020-09-14
+2020-07-20 岡山大学.ハードウェア.ソフトウェア #jobhunt due:2020-09-15
+2020-07-20 青山学院大.情報社会科学 #jobhunt due:2020-09-15
+2020-07-20 IEEE.MSN@東京.mobility.sensing.networking #deadlines due:2020-09-17
+2020-07-20 岡山理科大 #jobhunt due:2020-09-18
+2020-07-20 長岡技術科学大.情報・経営システム工学専攻 #jobhunt due:2020-09-18
+2020-07-20 岩手県立大.人工知能コース #jobhunt due:2020-09-25
+2020-07-20 東京理科大.数理モデリング、知能数理分野 #jobhunt due:2020-09-25
+2020-07-20 ACMtran・IoV #deadlines due:2020-09-28
+2020-07-20 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
+2020-07-20 mdpi・stenography #deadlines due:2020-09-30
+2020-07-20 成蹊大.計算科学 #jobhunt due:2020-09-30
+2020-07-20 東京都市大.情報数理 #jobhunt due:2020-09-30
+2020-07-20 東京電機大 #jobhunt due:2020-09-30
+2020-07-20 株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】 #jobhunt due:2020-09-30
+2020-07-20 福岡大.情報学 #jobhunt due:2020-09-30
+2020-07-20 acm・edgeAI #deadlines due:2020-10-01
+2020-07-20 明星大.データアナリティクス #jobhunt due:2020-10-02
+2020-07-20 立命館大学.システム制御工学.無線通信・電波 #jobhunt due:2020-10-09
+2020-07-20 tnsm・netmng #deadlines due:2020-10-15
+2020-07-20 FIT.制御・計測に関連する分野 #jobhunt due:2020-10-16
+2020-07-20 福岡工業大 #jobhunt due:2020-10-30
+2020-07-20 springerj・cybersecAI #deadlines due:2020-10-31
+2020-07-20 mdpi.5g #deadlines due:2020-11-20
+2020-07-20 IET・iot #deadlines due:2020-12-01
+2020-07-20 MDPI.geotech.spatiotemporal #deadlines due:2020-12-10
+2020-07-20 MDPI.SloT.sensing.IoT #deadlines due:2020-12-31
+2020-07-20 MDPI.drone.swarms #deadlines due:2020-12-31
