--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -2,15 +2,13 @@
 2020-07-27 kindle #current due:2020-07-27
 2020-07-27 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2020-07-27
 2020-07-27 wifi dongle @ home #current due:2020-07-27
-2020-07-27 滋賀大 #jobhunt due:2020-07-30
+2020-07-27 滋賀大★byemail #jobhunt due:2020-07-30
 2020-07-27 EAI・mobiquitous #deadlines due:2020-07-31
 2020-07-27 ElsevierJ.onlinesocialnets #deadlines due:2020-07-31
 2020-07-27 mdpi・V2Xcomm #deadlines due:2020-07-31
-2020-07-27 九州国際大.情報学基礎 #jobhunt due:2020-07-31
-2020-07-27 名古屋大.人間情報学 #jobhunt due:2020-07-31
+2020-07-27 名古屋大.人間情報学★教授 #jobhunt due:2020-07-31
 2020-07-27 埼玉工業大.情報学 #jobhunt due:2020-07-31
 2020-07-27 岡山理科大.人工知能分野 #jobhunt due:2020-07-31
-2020-07-27 法政大.信号処理、統計、計測、機械学習分野 #jobhunt due:2020-07-31
 2020-07-27 EAI.bodynets #deadlines due:2020-08-01
 2020-07-27 intconf.IEEE.MCNA.multimedia★jouhnalspecials #deadlines due:2020-08-01
 2020-07-27 (3) docomocycle data collect #regulars due:2020-08-03
