--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -7,6 +7,7 @@
 2020-09-01 conf~j.candar(naha+virtual) #deadlines due:2020-09-06
 2020-09-01 conf.HPCS.highperf #deadlines due:2020-09-07
 2020-09-01 conf.IEEE.cloudnet #deadlines due:2020-09-07
+2020-09-01 intconf.IEEE.NCA.netapps #deadlines due:2020-09-07
 2020-09-01 明治大 #jobhunt due:2020-09-07
 2020-09-01 法政大学.情報学・計算基盤 #jobhunt due:2020-09-07
 2020-09-01 (3) docomocycle data collect #regulars due:2020-09-08
@@ -17,6 +18,7 @@
 2020-09-01 公立はこだて未来大.情報デザイン.複雑系知能分野 #jobhunt due:2020-09-10
 2020-09-01 広島工業大学・コンピュータシステム #jobhunt due:2020-09-10
 2020-09-01 広島工業大学・情報ネットワーク #jobhunt due:2020-09-10
+2020-09-01 ACM.nanococoa.embedsensors #deadlines due:2020-09-11
 2020-09-01 audio automation for open campus #midterm due:2020-09-11
 2020-09-01 conf.IEEE.latincom.communications #deadlines due:2020-09-11
 2020-09-01 conf.IEEEComSoc.NoF.networks.of.future #deadlines due:2020-09-11
@@ -43,6 +45,7 @@
 2020-09-01 conf~j.EAI.HealthWear.wearables.in.healthcare #deadlines due:2020-09-15
 2020-09-01 岡山大学.ハードウェア.ソフトウェア #jobhunt due:2020-09-15
 2020-09-01 青山学院大.情報社会科学 #jobhunt due:2020-09-15
+2020-09-01 CCIoT.smartIOT #deadlines due:2020-09-18
 2020-09-01 conf.ACM.SenSys.smart.iot.systems #deadlines due:2020-09-18
 2020-09-01 journal.hindawi.intelligent.techniques.for.infosecurity.in.IoT.envs #deadlines due:2020-09-18
 2020-09-01 京都先端科学大学・統計やビジネスデータの見方 #jobhunt due:2020-09-18
@@ -60,9 +63,11 @@
 2020-09-01 日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野 #jobhunt due:2020-09-25
 2020-09-01 東京大学.高性能計算地球科学分野 #jobhunt due:2020-09-25
 2020-09-01 東京理科大.数理モデリング、知能数理分野 #jobhunt due:2020-09-25
+2020-09-01 ACMtran・IoV #deadlines due:2020-09-28
 2020-09-01 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
 2020-09-01 journal.EAI.digitalSystems4Humans #deadlines due:2020-09-30
 2020-09-01 journal.IJCIS.intel.for.manage.social.nets #deadlines due:2020-09-30
+2020-09-01 mdpi・stenography #deadlines due:2020-09-30
 2020-09-01 公立はこだて未来大学・情報システム #jobhunt due:2020-09-30
 2020-09-01 兵庫県立大学.AI・IoT・ビックデータ #jobhunt due:2020-09-30
 2020-09-01 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
@@ -78,16 +83,20 @@
 2020-09-01 福岡大.情報学 #jobhunt due:2020-09-30
 2020-09-01 静岡理工科大学.電子情報分野 #jobhunt due:2020-09-30
 2020-09-01 龍谷大学・情報科学分野 #jobhunt due:2020-09-30
+2020-09-01 acm・edgeAI #deadlines due:2020-10-01
 2020-09-01 adobe @ work, home #longterm due:2020-10-01
 2020-09-01 journal.mdpi.intel.sec.IoT #deadlines due:2020-10-01
 2020-09-01 mag.IEEEcommag.network.softwarization.and.mngmnt.(opencall) #deadlines due:2020-10-01
+2020-09-01 mdpi・wsensornets #deadlines due:2020-10-01
 2020-09-01 windows auth @ zaniya #longterm due:2020-10-01
 2020-09-01 明星大.データアナリティクス #jobhunt due:2020-10-02
+2020-09-01 BigDataJ.softcompute #deadlines due:2020-10-05
 2020-09-01 立命館大学.システム制御工学.無線通信・電波 #jobhunt due:2020-10-09
 2020-09-01 conf.IEEE.MSN(tokyo).mobility.sensing.networking #deadlines due:2020-10-10
 2020-09-01 東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど #jobhunt due:2020-10-12
 2020-09-01 journal.MDPI.ble.bluetooth.low.energy #deadlines due:2020-10-15
 2020-09-01 journal.TNSM.cybersecurity.sec.manage.nets.services #deadlines due:2020-10-15
+2020-09-01 tnsm・netmng #deadlines due:2020-10-15
 2020-09-01 FIT.制御・計測に関連する分野 #jobhunt due:2020-10-16
 2020-09-01 愛知工科大学・組込み系システム #jobhunt due:2020-10-16
 2020-09-01 東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究 #jobhunt due:2020-10-16
@@ -95,8 +104,19 @@
 2020-09-01 足利大学・人工知能 #jobhunt due:2020-10-30
 2020-09-01 足利大学・情報工学、情報科学センター #jobhunt due:2020-10-30
 2020-09-01 香川大学・機械システム #jobhunt due:2020-10-30
+2020-09-01 WileyJ.software.innovations #deadlines due:2020-10-31
 2020-09-01 journal.Biosensors(JCR).machine.learning #deadlines due:2020-10-31
+2020-09-01 springerj・cybersecAI #deadlines due:2020-10-31
+2020-09-01 mdpij.wirelessprotocols #deadlines due:2020-11-01
 2020-09-01 conf.VNC.vehicular.networking #deadlines due:2020-11-06
 2020-09-01 香川大学・情報システム・セキュリティコース #jobhunt due:2020-11-13
+2020-09-01 mdpi.5g #deadlines due:2020-11-20
 2020-09-01 journal.mdpi.blockchain.for.5g.and.IoT.(opencall) #deadlines due:2020-12-00
+2020-09-01 IETj.smartcities #deadlines due:2020-12-01
+2020-09-01 IET・iot #deadlines due:2020-12-01
+2020-09-01 MDPI.geotech.spatiotemporal #deadlines due:2020-12-10
+2020-09-01 AppliedEnergyJ・P2Penergyshare #deadlines due:2020-12-20
+2020-09-01 MDPI.SloT.sensing.IoT #deadlines due:2020-12-31
+2020-09-01 MDPI.drone.swarms #deadlines due:2020-12-31
 2020-09-01 journal.ISF.AI.for.covid #deadlines due:2021-01-15
+2020-09-01 MDPI.sustain #deadlines due:2021-01-31
