--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -16,11 +16,8 @@
 2020-09-11 journal.hindawi.intelligent.techniques.for.infosecurity.in.IoT.envs #deadlines due:2020-09-18
 2020-09-11 ① money (weekly) #regulars due:2020-09-18
 2020-09-11 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2020-09-18
+2020-09-11 ▲長岡技術科学大.情報・経営システム工学専攻 #jobhunt due:2020-09-18
 2020-09-11 京都先端科学大学・統計やビジネスデータの見方 #jobhunt due:2020-09-18
-2020-09-11 岡山理科大 #jobhunt due:2020-09-18
-2020-09-11 東京電機大学・情報学部門 #jobhunt due:2020-09-18
-2020-09-11 熊本学園大学.計量経済学 #jobhunt due:2020-09-18
-2020-09-11 長岡技術科学大.情報・経営システム工学専攻 #jobhunt due:2020-09-18
 2020-09-11 conf.IFIP.IM.experience.session.papers #deadlines due:2020-09-20
 2020-09-11 松本大学.データサイエンス.情報学-データサイエンス #jobhunt due:2020-09-20
 2020-09-11 audio automation for open campus #midterm due:2020-09-21
@@ -29,34 +26,25 @@
 2020-09-11 simplify yalms #midterm due:2020-09-21
 2020-09-11 tokyo hotels and schedule #midterm due:2020-09-21
 2020-09-11 video recognition engine (sotsuken) #midterm due:2020-09-21
-2020-09-11 岐阜聖徳学園大学・情報学 #jobhunt due:2020-09-23
 2020-09-11 conf.ACD.codeaspy.data.and.app.sec.and.privacy #deadlines due:2020-09-24
 2020-09-11 conf+j.CVNET.springer #deadlines due:2020-09-25
+2020-09-11 ‼930▲成蹊大学.総合理工-計算科学-数物系科学 #jobhunt due:2020-09-25
+2020-09-11 ▲日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野 #jobhunt due:2020-09-25
 2020-09-11 岩手県立大.人工知能コース #jobhunt due:2020-09-25
-2020-09-11 成蹊大学.総合理工-計算科学-数物系科学 #jobhunt due:2020-09-25
-2020-09-11 日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野 #jobhunt due:2020-09-25
-2020-09-11 東京大学.高性能計算地球科学分野 #jobhunt due:2020-09-25
-2020-09-11 東京理科大.数理モデリング、知能数理分野 #jobhunt due:2020-09-25
+2020-09-11 ？★東京理科大.数理モデリング、知能数理分野 #jobhunt due:2020-09-25
 2020-09-11 ACMtran・IoV #deadlines due:2020-09-28
 2020-09-11 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
 2020-09-11 journal.EAI.digitalSystems4Humans #deadlines due:2020-09-30
 2020-09-11 journal.IJCIS.intel.for.manage.social.nets #deadlines due:2020-09-30
 2020-09-11 mdpi・stenography #deadlines due:2020-09-30
-2020-09-11 公立はこだて未来大学・情報システム #jobhunt due:2020-09-30
-2020-09-11 兵庫県立大学.AI・IoT・ビックデータ #jobhunt due:2020-09-30
+2020-09-11 ‼930▲成蹊大.計算科学 #jobhunt due:2020-09-30
+2020-09-11 ‼★公立はこだて未来大学・情報システム #jobhunt due:2020-09-30
+2020-09-11 ‼★龍谷大学・情報科学分野 #jobhunt due:2020-09-30
+2020-09-11 ▲東京都市大学・情報理論 #jobhunt due:2020-09-30
+2020-09-11 ▲静岡理工科大学.電子情報分野 #jobhunt due:2020-09-30
 2020-09-11 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
-2020-09-11 北海道大学.数理科学・応用数学分野 #jobhunt due:2020-09-30
 2020-09-11 名城大学・情報学、統計学、フィールド調査 #jobhunt due:2020-09-30
-2020-09-11 岡山大学・電気電子機能開発 #jobhunt due:2020-09-30
-2020-09-11 成蹊大.計算科学 #jobhunt due:2020-09-30
-2020-09-11 東京都市大.情報数理 #jobhunt due:2020-09-30
-2020-09-11 東京都市大学・情報理論 #jobhunt due:2020-09-30
-2020-09-11 東京電機大 #jobhunt due:2020-09-30
-2020-09-11 株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】 #jobhunt due:2020-09-30
-2020-09-11 熊本大学・ビッグデータ #jobhunt due:2020-09-30
 2020-09-11 福岡大.情報学 #jobhunt due:2020-09-30
-2020-09-11 静岡理工科大学.電子情報分野 #jobhunt due:2020-09-30
-2020-09-11 龍谷大学・情報科学分野 #jobhunt due:2020-09-30
 2020-09-11 acm・edgeAI #deadlines due:2020-10-01
 2020-09-11 journal.mdpi.intel.sec.IoT #deadlines due:2020-10-01
 2020-09-11 mag.IEEEcommag.network.softwarization.and.mngmnt.(opencall) #deadlines due:2020-10-01
@@ -67,7 +55,6 @@
 2020-09-11 conf.IEEE.MSN(tokyo).mobility.sensing.networking #deadlines due:2020-10-10
 2020-09-11 adobe @ work, home #longterm due:2020-10-11
 2020-09-11 windows auth @ zaniya #longterm due:2020-10-11
-2020-09-11 東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど #jobhunt due:2020-10-12
 2020-09-11 journal.MDPI.ble.bluetooth.low.energy #deadlines due:2020-10-15
 2020-09-11 journal.TNSM.cybersecurity.sec.manage.nets.services #deadlines due:2020-10-15
 2020-09-11 tnsm・netmng #deadlines due:2020-10-15
